--- a/css/style.scss
+++ b/css/style.scss
@@ -168,7 +168,7 @@ main {
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 19px;
-                list-style: url(/image/Vector.png);
+                list-style: url(/FoodXd/image/Vector.png);
 
             }
 
@@ -196,7 +196,7 @@ main {
 // end of content
 
 .new-ad {
-    background-image: url(/image/7.png);
+    background-image: url(/FoodXd/image/7.png);
     background-size: cover;
 
     .ad-text {
